# Ash

./: .gitignore  .gitmodules  CMakeLists.txt  README.md  compile_commands.json
.cache/clangd/index/: Ash.h.083D71837124B6F5.idx  Log.cpp.57E8D5417D6C49C7.idx  Log.h.1CE8626D70CB0038.idx  Window.cpp.02102569ABBC94A2.idx  Window.h.2FE67E94D0633551.idx  _fixes.hpp.737AE029F9C86BA4.idx  _vectorize.hpp.52E04B5BEADA6206.idx  common.hpp.AAF6759D6F2DB51A.idx  compute_common.hpp.29D65853FD7E390B.idx  compute_vector_relational.hpp.80206E8753CEBEA0.idx  exponential.hpp.437E6F6BE8A86A41.idx  func_common.inl.5CA3D2C1462180D3.idx  func_exponential.inl.B57A398ED8881024.idx  func_geometric.inl.554D2AA127A3348A.idx  func_integer.inl.CC672238E473BDF6.idx  func_matrix.inl.29FE98EF3D7E4EAF.idx  func_packing.inl.A847585BC5EE7AC2.idx  func_trigonometric.inl.8BF1850740249E27.idx  func_vector_relational.inl.CB427CF2FE5F0A7E.idx  fwd.hpp.05630972CAEE5740.idx  geometric.hpp.5742517593DE0E55.idx  glfw3.h.A5F4902C1B5F3FA5.idx  glm.hpp.9F277ED575E3672A.idx  integer.hpp.7029DF7D5D412B8D.idx  main.cpp.47D1054FE9CDAB9D.idx  main.cpp.CE89553725191B06.idx  mat2x2.hpp.636E8A54A680A23F.idx  mat2x3.hpp.52AAB3E94A251A12.idx  mat2x4.hpp.6921B9F26038EFB6.idx  mat3x2.hpp.CF353D232B50EB57.idx  mat3x3.hpp.CA8EE7BEFBF5E725.idx  mat3x4.hpp.1E5F2F6A78AE40C5.idx  mat4x2.hpp.D34ABF3D485052BC.idx  mat4x3.hpp.4C796754C42B5C88.idx  mat4x4.hpp.FE3144E18098E56C.idx  matrix.hpp.1146D01225A4627F.idx  matrix_double2x2.hpp.5E0135D129563923.idx  matrix_double2x2_precision.hpp.FE6EF96C6E03AEBF.idx  matrix_double2x3.hpp.98B49BD97021D8AB.idx  matrix_double2x3_precision.hpp.FE3EBDED4307F941.idx  (+101 more)
Engine/: Ash.h  ashpch.cpp  ashpch.h
Engine/src/: App.cpp  App.h  Camera.h  Components.h  Core.h  Descriptor.cpp  Descriptor.h  Entity.cpp  Entity.h  Helper.cpp  Helper.h  LibImplementations.cpp  Log.cpp  Log.h  Mesh.cpp  Mesh.h  Pipeline.cpp  Pipeline.h  RenderCommand.h  Renderer.cpp  Renderer.h  Scene.cpp  Scene.h  Shader.cpp  Shader.h  System.h  VulkanAPI.cpp  VulkanAPI.h  Window.cpp  Window.h  main.cpp  vk_mem_alloc.h
Game/: GameLayer.cpp  GameLayer.h  MySystem.cpp  MySystem.h  main.cpp
assets/: shader.vert
assets/models/viking_room/: viking_room.mtl
assets/shaders/: phong.vert  shader.frag  shader.vert
include/: Lion.h  Window.h
src/: main.cpp
